[gd_scene load_steps=4 format=2]

[ext_resource path="res://gd/shotgun.gd" type="Script" id=1]
[ext_resource path="res://assets/towers/shotgun/shotgun_shell.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/towers/laser/default/laser_spriteframes.tres" type="SpriteFrames" id=3]


[node name="laser" type="StaticBody2D" index="0"]

input_pickable = false
collision_layer = 4
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
detect_radius = 420
fire_rate = 0.5
Bullet = ExtResource( 2 )

[node name="visibility" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="collision_shape" type="CollisionShape2D" parent="visibility" index="0"]

[node name="animated_sprite" type="AnimatedSprite" parent="." index="1"]

position = Vector2( -0.466205, -1.91944 )
scale = Vector2( 1.22775, 1.22669 )
frames = ExtResource( 3 )
animation = "level1"

[node name="collision_shape" type="CollisionPolygon2D" parent="." index="2"]

position = Vector2( -8.9407e-08, -1.19209e-06 )
build_mode = 0
polygon = PoolVector2Array( -7.63799, 16.274, -7.63799, -2.3996, -5.27696, -4.54599, 5.66963, -4.76063, 7.60138, -2.18496, 7.38675, 16.7033 )

[node name="shoot_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="visibility" to="." method="_on_Visibility_body_entered"]

[connection signal="body_exited" from="visibility" to="." method="_on_Visibility_body_exited"]

[connection signal="timeout" from="shoot_timer" to="." method="_on_ShootTimer_timeout"]


